# Cypheria-T2

./: .gitignore  .temp  deny.toml  index.html
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  clipboard_history.rs  entries.rs  generator.rs  mod.rs  notes.rs  reveal.rs  settings.rs  vault_mgmt.rs  vault_path.rs
src-tauri/src/crypto/: aes.rs  kdf.rs  keys.rs  kyber.rs  mod.rs  rng.rs
src-tauri/src/models/: entry.rs  mod.rs  note.rs  notes.rs  settings.rs
src-tauri/src/session/: autolock.rs  manager.rs  mod.rs
src-tauri/src/vault/: entry.rs  format.rs  mod.rs  notes.rs  store.rs
